MDHS-2: Fix issue where search filter labels were out of alignment.

--- a/src/main/resources/public/app/sass/organisms/_facility-finder.scss
+++ b/src/main/resources/public/app/sass/organisms/_facility-finder.scss
@@ -6,6 +6,11 @@
   margin-bottom: 20px;
 }
 
+.form__sub-title-text{
+  @extend .col-sm-12;
+  margin-bottom: 15px;
+}
+
 .facility-finder__filter {
   height: 50px;
 }
